--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body,html{
 	width: 100%;
 	height:100%;
+	font-family: "Open Sans";
 }
 .logo{
 	transition: all 1s;
@@ -19,8 +20,26 @@ li :hover
 
 h1{
 	font-family: "Open Sans";
+	font-weight: bold;
+}
+h5{
+	font-weight: bold;
 }
 .card{
 	margin-top: 25px;
 	margin-left: 25px;
+}
+
+.map-container-2{
+overflow:hidden;
+padding-bottom:56.25%;
+position:relative;
+height:0;
+}
+.map-container-2 iframe{
+left:0;
+top:0;
+height:100%;
+width:100%;
+position:absolute;
 }
